admission/ValidatingAdmissionPolicy/policies/privilege-escalation/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privilege-escalation-containers
  annotations:
    kubeapt.io/uuid: "e7d47f8e-5007-45a8-b664-f21877f31e74"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    securityContext:
      allowPrivilegeEscalation: true
